STYLE: Responsive - complete styling of our expertise cards for mobile

--- a/index.html
+++ b/index.html
@@ -231,17 +231,17 @@
   </div>
 
     <!-- SECTION - OUR VISION -->
-  <div class="container py-5 my-3 our-section-image">
+  <div class="container py-5 my-1 our-section-image">
     <img src="assets/images/home-vision-pic.jpg" class="background-img" alt="Picture of a small island">
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
-      <div class="d-flex gap-4">
-          <span class="d-flex align-items-centre">
-            <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
-          </span> 
-          <span>
-            <h2 class="py-3">our vision</h2>
-          </span> 
-          </div>
+      <div class="d-flex gap-4 py-4">
+        <span class="d-flex align-items-centre">
+          <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
+        </span> 
+        <span>
+          <h2 class="py-3">our vision</h2>
+        </span> 
+      </div>
       <div class="pb-5">
         <p class="text-1-250">
           Mental health professionals in Ireland would be mindful and aware of the effects of social injustice and discrimination 
@@ -252,17 +252,17 @@
   </div>
 
   <!-- SECTION - OUR MISSION -->
-  <div class="container py-5 my-3 our-section-image">
+  <div class="container py-5 my-1 our-section-image">
     <img src="assets/images/home-mission-pic.jpg" class="background-img" alt="Picture of a beach">
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
-      <div class="d-flex gap-4">
-          <span class="d-flex align-items-centre">
-            <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Mission paragraph (a target with arrow in bull's eye)">
-          </span> 
-          <span>
-            <h2 class="py-3">our mission</h2>
-          </span> 
-          </div>
+      <div class="d-flex gap-4 py-4">
+        <span class="d-flex align-items-centre">
+          <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Mission paragraph (a target with arrow in bull's eye)">
+        </span> 
+        <span>
+          <h2 class="py-3">our mission</h2>
+        </span> 
+      </div>
       <div class="pb-5">
         <p class="text-1-250">
           To raise awareness and depth of understanding in Mental Health Professionals on the impact of conscious and unconscious bias,
