STYLE: Responsive - resize testimonials slides to mobile size

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
   <!-- SECTION - TESTIMONIALS -->
     <div class="container bg-parc-lgrey">
-      <div class="col py-4 mx-auto">
+      <div class="col py-1 py-xs-4 mx-auto">
         <div class="pt-5">
           <h2 class="text-center text-parc-dgrey">
             testimonials
@@ -293,10 +293,10 @@
 
         <!-- Testimonial 1 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -305,10 +305,10 @@
 
         <!-- Testimonial 2 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -317,10 +317,10 @@
 
         <!-- Testimonial 3 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -329,10 +329,10 @@
 
         <!-- Testimonial 4 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -341,10 +341,10 @@
 
         <!-- Testimonial 5 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -353,10 +353,10 @@
 
         <!-- Testimonial 6 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -365,10 +365,10 @@
 
         <!-- Testimonial 7 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -377,10 +377,10 @@
 
         <!-- Testimonial 8 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -389,10 +389,10 @@
 
         <!-- Testimonial 9 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -401,10 +401,10 @@
 
         <!-- Testimonial 10 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -413,10 +413,10 @@
 
         <!-- Testimonial 11 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -425,10 +425,10 @@
 
         <!-- Testimonial 12 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
@@ -437,10 +437,10 @@
 
         <!-- Testimonial 13 -->
         <div class="container slide bg-white mx-auto gap-4 testimonial">
-          <div class="col-5">
+          <div class="col col-xs-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7">
+          <div class="col col-xs-7">
             <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
