--- a/index.html
+++ b/index.html
@@ -477,6 +477,22 @@
     </div>
   </div>
 
+  <!-- LINKEDIN AD -->
+  <div class="container my-1 our-section-image">
+    <img src="assets/images/linkedin-ad.jpg" class="background-img" alt="Picture of rows of seats at conference hall">
+    <div class="col py-5 mx-auto text-white">
+      <div>
+        <h3 class="py-5 text-center">to find out about our next workshop or a talk</h3>
+      </div>
+      <div class="button py-2">
+        <a href="#" class="button-link">
+          <span class="button-text d-block">Get in touch</span>
+          <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+        </a>
+      </div>
+    </div>
+  </div>
+  
   <!-- FOOTER -->
   <footer class="container text-parc-lgrey bg-parc-ddgrey pt-4 pb-1">
     <div class="col-11 section-footer">
