STYLE: Add styling for linkedin ad

--- a/index.html
+++ b/index.html
@@ -480,13 +480,13 @@
   <!-- LINKEDIN AD -->
   <div class="container my-1 our-section-image">
     <img src="assets/images/linkedin-ad.jpg" class="background-img" alt="Picture of rows of seats at conference hall">
-    <div class="col py-5 mx-auto text-white">
-      <div>
-        <h3 class="py-5 text-center">to find out about our next workshop or a talk</h3>
+    <div class="col-10 py-5 mx-auto text-white">
+      <div class="py-1">
+        <p class="text-center">To find out about our next workshop or a talk, visit our</p>
       </div>
-      <div class="button py-2">
+      <div class="button pt-1 pb-5 mx-auto">
         <a href="#" class="button-link">
-          <span class="button-text d-block">Get in touch</span>
+          <span class="button-text d-block">Linkedin page</span>
           <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
         </a>
       </div>
