REFACTOR: Beautify code on html pages

--- a/about.html
+++ b/about.html
@@ -154,222 +154,252 @@
     </header>
 
     <!-- ABOUT US -->
-    <div>
-      
-    </div>
+    <div></div>
 
     <!-- SECTION - TESTIMONIALS -->
-      <div class="container bg-parc-lgrey">
-        <div class="col py-1 py-xs-4 mx-auto">
-          <div class="pt-5">
-            <h2 class="text-center text-parc-dgrey">
-              testimonials
-            </h2>
-          </div>
+    <div class="container bg-parc-lgrey">
+      <div class="col py-1 py-xs-4 mx-auto">
+        <div class="pt-5">
+          <h2 class="text-center text-parc-dgrey">testimonials</h2>
         </div>
       </div>
+    </div>
 
-      <!-- Carousel Strip -->
-      <div class="carousel-strip-wrapper overflow-auto container bg-parc-lgrey">
-        <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
-
-          <!-- Testimonial 1 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
+    <!-- Carousel Strip -->
+    <div class="carousel-strip-wrapper overflow-auto container bg-parc-lgrey">
+      <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
+        <!-- Testimonial 1 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
           </div>
-
-          <!-- Testimonial 2 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
           </div>
-
-          <!-- Testimonial 3 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 4 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 5 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 6 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 7 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 8 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 9 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 10 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 11 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 12 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <!-- Testimonial 13 -->
-          <div class="container slide bg-white mx-auto gap-4 testimonial">
-            <div class="col col-xs-5">
-              <img class="testimonial-img" src="" alt="">
-            </div>
-            <div class="col col-xs-7">
-              <h3 class="py-3 mx-auto testimonial-header"></h3>
-              <p class="text-1-000 mx-auto testimonial-body"></p>
-              <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
-            </div>
-          </div>
-
-          <div class="carousel-fade carousel-fade-left"></div>
-          <div class="carousel-fade carousel-fade-right"></div>
-
         </div>
-      </div>
 
-      <!-- Navigation Buttons -->
-      <!-- <div class="d-flex justify-content-center gap-3 py-1 bg-parc-lgrey">
-        <button class="btn btn-outline-primary" onclick="scrollCarouselLeft()">‹</button>
-        <button class="btn btn-outline-primary" onclick="scrollCarouselRight()">›</button>
-      </div> -->
+        <!-- Testimonial 2 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
 
-      <!-- Pagination Dots -->
-      <div class="d-flex justify-content-center gap-2 pt-3 pb-5 bg-parc-lgrey" id="paginationDots">
-        <span class="dot active" onclick="goToSlide(0)"></span>
-        <span class="dot" onclick="goToSlide(1)"></span>
-        <span class="dot" onclick="goToSlide(2)"></span>
-        <span class="dot" onclick="goToSlide(3)"></span>
-        <span class="dot" onclick="goToSlide(4)"></span>
-        <span class="dot" onclick="goToSlide(5)"></span>
-        <span class="dot" onclick="goToSlide(6)"></span>
-        <span class="dot" onclick="goToSlide(7)"></span>
-        <span class="dot" onclick="goToSlide(8)"></span>
-        <span class="dot" onclick="goToSlide(9)"></span>
-        <span class="dot" onclick="goToSlide(10)"></span>
-        <span class="dot" onclick="goToSlide(11)"></span>
-        <span class="dot" onclick="goToSlide(12)"></span>
+        <!-- Testimonial 3 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 4 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 5 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 6 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 7 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 8 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 9 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 10 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 11 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 12 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 13 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col col-xs-5">
+            <img class="testimonial-img" src="" alt="" />
+          </div>
+          <div class="col col-xs-7">
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p
+              class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"
+            ></p>
+          </div>
+        </div>
+
+        <div class="carousel-fade carousel-fade-left"></div>
+        <div class="carousel-fade carousel-fade-right"></div>
       </div>
+    </div>
+
+    <!-- Navigation Buttons -->
+    <!-- <div class="d-flex justify-content-center gap-3 py-1 bg-parc-lgrey">
+      <button class="btn btn-outline-primary" onclick="scrollCarouselLeft()">‹</button>
+      <button class="btn btn-outline-primary" onclick="scrollCarouselRight()">›</button>
+    </div> -->
+
+    <!-- Pagination Dots -->
+    <div
+      class="d-flex justify-content-center gap-2 pt-3 pb-5 bg-parc-lgrey"
+      id="paginationDots"
+    >
+      <span class="dot active" onclick="goToSlide(0)"></span>
+      <span class="dot" onclick="goToSlide(1)"></span>
+      <span class="dot" onclick="goToSlide(2)"></span>
+      <span class="dot" onclick="goToSlide(3)"></span>
+      <span class="dot" onclick="goToSlide(4)"></span>
+      <span class="dot" onclick="goToSlide(5)"></span>
+      <span class="dot" onclick="goToSlide(6)"></span>
+      <span class="dot" onclick="goToSlide(7)"></span>
+      <span class="dot" onclick="goToSlide(8)"></span>
+      <span class="dot" onclick="goToSlide(9)"></span>
+      <span class="dot" onclick="goToSlide(10)"></span>
+      <span class="dot" onclick="goToSlide(11)"></span>
+      <span class="dot" onclick="goToSlide(12)"></span>
     </div>
 
     <!-- LINKEDIN AD -->
     <div class="container my-1 our-section-image">
-      <img src="assets/images/linkedin-ad.jpg" class="background-img" alt="Picture of rows of seats at conference hall">
+      <img
+        src="assets/images/linkedin-ad.jpg"
+        class="background-img"
+        alt="Picture of rows of seats at conference hall"
+      />
       <div class="col-10 py-5 mx-auto text-white">
         <div class="py-1">
-          <p class="text-center">To find out about our next workshop or a talk, visit our</p>
+          <p class="text-center">
+            To find out about our next workshop or a talk, visit our
+          </p>
         </div>
         <div class="button pt-1 pb-5 mx-auto">
           <a href="#" class="button-link">
             <span class="button-text d-block">Linkedin page</span>
-            <span class="button-icon pt-1"><i class="fa-solid fa-circle-arrow-right"></i></span>
+            <span class="button-icon pt-1"
+              ><i class="fa-solid fa-circle-arrow-right"></i
+            ></span>
           </a>
         </div>
       </div>
