STYLE: Styling active nav links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="navigation-desktop">
           <ul class="nav-links my-auto">
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="#">home</a>
+              <a class="px-4 py-3 rounded active" href="#">home</a>
             </li>
             <li class="d-inline">
               <a class="px-4 py-3 rounded" href="#">about us</a>
@@ -581,7 +581,7 @@
     </div>
 
     <!-- LINKEDIN AD -->
-    <div class="container my-1 our-section-image">
+    <div class="container my-1 our-section-image section-linkedin-ad">
       <img
         src="assets/images/linkedin-ad.jpg"
         class="background-img"
