FEAT: Connect About us web page

--- a/about.html
+++ b/about.html
@@ -54,13 +54,13 @@
         <div class="navigation-desktop">
           <ul class="nav-links my-auto">
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="#">home</a>
+              <a class="px-4 py-3 rounded" href="/index.html">home</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="#">about us</a>
+              <a class="px-4 py-3 rounded selected" href="#">about us</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="#">contact</a>
+              <a class="px-4 py-3 rounded" href="/contact.html">contact</a>
             </li>
           </ul>
         </div>
@@ -89,9 +89,9 @@
       </div>
       <div class="d-block py-2">
         <ul class="">
-          <li class="py-4"><a href="#">home</a></li>
-          <li class="py-4"><a href="#">about us</a></li>
-          <li class="py-4"><a href="#">contact</a></li>
+          <li class="py-4"><a href="/index.html">home</a></li>
+          <li class="py-4"><a href="/about.html">about us</a></li>
+          <li class="py-4"><a href="/contact.html">contact</a></li>
         </ul>
       </div>
       <div class="py-4">
@@ -355,12 +355,6 @@
       </div>
     </div>
 
-    <!-- Navigation Buttons -->
-    <!-- <div class="d-flex justify-content-center gap-3 py-1 bg-parc-lgrey">
-      <button class="btn btn-outline-primary" onclick="scrollCarouselLeft()">‹</button>
-      <button class="btn btn-outline-primary" onclick="scrollCarouselRight()">›</button>
-    </div> -->
-
     <!-- Pagination Dots -->
     <div
       class="d-flex justify-content-center gap-2 pt-3 pb-5 bg-parc-lgrey"
@@ -382,7 +376,7 @@
     </div>
 
     <!-- LINKEDIN AD -->
-    <div class="container my-1 our-section-image">
+    <div class="container my-1 our-section-image section-linkedin-ad">
       <img
         src="assets/images/linkedin-ad.jpg"
         class="background-img"
@@ -395,7 +389,7 @@
           </p>
         </div>
         <div class="button pt-1 pb-5 mx-auto">
-          <a href="#" class="button-link">
+          <a href="https://www.linkedin.com/company/parc-training-ireland/" class="button-link">
             <span class="button-text d-block">Linkedin page</span>
             <span class="button-icon pt-1"
               ><i class="fa-solid fa-circle-arrow-right"></i
@@ -419,9 +413,9 @@
         </div>
         <div>
           <ul class="footer-links">
-            <li><a class="py-2 px-4 rounded" href="">home</a></li>
-            <li><a class="py-2 px-4 rounded" href="">about us</a></li>
-            <li><a class="py-2 px-4 rounded" href="">contact</a></li>
+            <li><a class="py-2 px-4 rounded" href="/index.html">home</a></li>
+            <li><a class="py-2 px-4 rounded" href="#">about us</a></li>
+            <li><a class="py-2 px-4 rounded" href="/contact.html">contact</a></li>
           </ul>
         </div>
         <div>
