--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <div class="navigation-desktop">
           <ul class="nav-links my-auto">
             <li class="d-inline">
-              <a class="px-4 py-3 rounded active" href="#">home</a>
+              <a class="px-4 py-3 rounded selected" href="#">home</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="#">about us</a>
+              <a class="px-4 py-3 rounded" href="/about.html">about us</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="#">contact</a>
+              <a class="px-4 py-3 rounded" href="/contact.html">contact</a>
             </li>
           </ul>
         </div>
@@ -92,9 +92,9 @@
       </div>
       <div class="d-block py-2">
         <ul class="">
-          <li class="py-4"><a href="#">home</a></li>
-          <li class="py-4"><a href="#">about us</a></li>
-          <li class="py-4"><a href="#">contact</a></li>
+          <li class="py-4"><a href="/index.html">home</a></li>
+          <li class="py-4"><a href="/about.html">about us</a></li>
+          <li class="py-4"><a href="/contact.html">contact</a></li>
         </ul>
       </div>
       <div class="py-4">
@@ -145,7 +145,7 @@
             practice get in touch with us today.
           </p>
           <div class="button py-2">
-            <a href="#" class="button-link">
+            <a href="/contact.html" class="button-link">
               <span class="button-text d-block">Get in touch</span>
               <span class="button-icon pt-1"
                 ><i class="fa-solid fa-circle-arrow-right"></i
@@ -202,7 +202,7 @@
             </div>
             <div class="container d-flex justify-content-end">
               <div class="col button py-1 button-card">
-                <a href="#" class="button-link">
+                <a href="/contact.html" class="button-link">
                   <span class="button-text d-block">Get in touch</span>
                   <span class="button-icon pt-1"
                     ><i class="fa-solid fa-circle-arrow-right"></i
@@ -239,7 +239,7 @@
             </div>
             <div class="container d-flex justify-content-end">
               <div class="col button py-1 button-card">
-                <a href="#" class="button-link">
+                <a href="/contact.html" class="button-link">
                   <span class="button-text d-block">Get in touch</span>
                   <span class="button-icon pt-1"
                     ><i class="fa-solid fa-circle-arrow-right"></i
@@ -274,7 +274,7 @@
             </div>
             <div class="container d-flex justify-content-end">
               <div class="col button py-1 button-card">
-                <a href="#" class="button-link">
+                <a href="/contact.html" class="button-link">
                   <span class="button-text d-block">Get in touch</span>
                   <span class="button-icon pt-1"
                     ><i class="fa-solid fa-circle-arrow-right"></i
@@ -594,7 +594,7 @@
           </p>
         </div>
         <div class="button pt-1 pb-5 mx-auto">
-          <a href="#" class="button-link">
+          <a href="https://www.linkedin.com/company/parc-training-ireland/" class="button-link">
             <span class="button-text d-block">Linkedin page</span>
             <span class="button-icon pt-1"
               ><i class="fa-solid fa-circle-arrow-right"></i
@@ -618,9 +618,9 @@
         </div>
         <div>
           <ul class="footer-links">
-            <li><a class="py-2 px-4 rounded" href="">home</a></li>
-            <li><a class="py-2 px-4 rounded" href="">about us</a></li>
-            <li><a class="py-2 px-4 rounded" href="">contact</a></li>
+            <li><a class="py-2 px-4 rounded" href="#">home</a></li>
+            <li><a class="py-2 px-4 rounded" href="/about.html">about us</a></li>
+            <li><a class="py-2 px-4 rounded" href="/contact.html">contact</a></li>
           </ul>
         </div>
         <div>
