--- a/about.html
+++ b/about.html
@@ -54,13 +54,13 @@
         <div class="navigation-desktop">
           <ul class="nav-links my-auto">
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="/index.html">home</a>
+              <a class="px-4 py-3 rounded" href="./index.html">home</a>
             </li>
             <li class="d-inline">
               <a class="px-4 py-3 rounded selected" href="#">about us</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="/contact.html">contact</a>
+              <a class="px-4 py-3 rounded" href="./contact.html">contact</a>
             </li>
           </ul>
         </div>
@@ -89,9 +89,9 @@
       </div>
       <div class="d-block py-2">
         <ul class="">
-          <li class="py-4"><a href="/index.html">home</a></li>
-          <li class="py-4"><a href="/about.html">about us</a></li>
-          <li class="py-4"><a href="/contact.html">contact</a></li>
+          <li class="py-4"><a href="./index.html">home</a></li>
+          <li class="py-4"><a href="./about.html">about us</a></li>
+          <li class="py-4"><a href="./contact.html">contact</a></li>
         </ul>
       </div>
       <div class="py-4">
@@ -413,9 +413,9 @@
         </div>
         <div>
           <ul class="footer-links">
-            <li><a class="py-2 px-4 rounded" href="/index.html">home</a></li>
+            <li><a class="py-2 px-4 rounded" href="./index.html">home</a></li>
             <li><a class="py-2 px-4 rounded" href="#">about us</a></li>
-            <li><a class="py-2 px-4 rounded" href="/contact.html">contact</a></li>
+            <li><a class="py-2 px-4 rounded" href="./contact.html">contact</a></li>
           </ul>
         </div>
         <div>
