--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
               <a class="px-4 py-3 rounded selected" href="#">home</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="/about.html">about us</a>
+              <a class="px-4 py-3 rounded" href="./about.html">about us</a>
             </li>
             <li class="d-inline">
-              <a class="px-4 py-3 rounded" href="/contact.html">contact</a>
+              <a class="px-4 py-3 rounded" href="./contact.html">contact</a>
             </li>
           </ul>
         </div>
@@ -92,9 +92,9 @@
       </div>
       <div class="d-block py-2">
         <ul class="">
-          <li class="py-4"><a href="/index.html">home</a></li>
-          <li class="py-4"><a href="/about.html">about us</a></li>
-          <li class="py-4"><a href="/contact.html">contact</a></li>
+          <li class="py-4"><a href="./index.html">home</a></li>
+          <li class="py-4"><a href="./about.html">about us</a></li>
+          <li class="py-4"><a href="./contact.html">contact</a></li>
         </ul>
       </div>
       <div class="py-4">
@@ -202,7 +202,7 @@
             </div>
             <div class="container d-flex justify-content-end">
               <div class="col button py-1 button-card">
-                <a href="/contact.html" class="button-link">
+                <a href="./contact.html" class="button-link">
                   <span class="button-text d-block">Get in touch</span>
                   <span class="button-icon pt-1"
                     ><i class="fa-solid fa-circle-arrow-right"></i
@@ -239,7 +239,7 @@
             </div>
             <div class="container d-flex justify-content-end">
               <div class="col button py-1 button-card">
-                <a href="/contact.html" class="button-link">
+                <a href="./contact.html" class="button-link">
                   <span class="button-text d-block">Get in touch</span>
                   <span class="button-icon pt-1"
                     ><i class="fa-solid fa-circle-arrow-right"></i
@@ -274,7 +274,7 @@
             </div>
             <div class="container d-flex justify-content-end">
               <div class="col button py-1 button-card">
-                <a href="/contact.html" class="button-link">
+                <a href="./contact.html" class="button-link">
                   <span class="button-text d-block">Get in touch</span>
                   <span class="button-icon pt-1"
                     ><i class="fa-solid fa-circle-arrow-right"></i
