FIX: Fix remaining navigation links

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             practice get in touch with us today.
           </p>
           <div class="button py-2">
-            <a href="/contact.html" class="button-link">
+            <a href="./contact.html" class="button-link">
               <span class="button-text d-block">Get in touch</span>
               <span class="button-icon pt-1"
                 ><i class="fa-solid fa-circle-arrow-right"></i
@@ -619,8 +619,8 @@
         <div>
           <ul class="footer-links">
             <li><a class="py-2 px-4 rounded" href="#">home</a></li>
-            <li><a class="py-2 px-4 rounded" href="/about.html">about us</a></li>
-            <li><a class="py-2 px-4 rounded" href="/contact.html">contact</a></li>
+            <li><a class="py-2 px-4 rounded" href="./about.html">about us</a></li>
+            <li><a class="py-2 px-4 rounded" href="./contact.html">contact</a></li>
           </ul>
         </div>
         <div>
