--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="container bg-nav sticky-top pt-1 pb-2">
       <div class="col-11 col-lg-8 mx-auto navbar">
         <div>
-          <a href="#">
+          <a href="./index.html">
             <img
               src="assets/images/parc-logo-color.svg"
               alt="PARC logo in colour"
@@ -608,7 +608,7 @@
     <footer class="container text-parc-lgrey bg-parc-ddgrey pt-4 pb-1">
       <div class="col-11 section-footer">
         <div>
-          <a href="#">
+          <a href="./index.html">
             <img
               src="assets/images/parc-logo-white.svg"
               alt="Description of the image"
