FEAT: Add Contact page jumbotron

--- a/contact.html
+++ b/contact.html
@@ -121,34 +121,20 @@
     </div>
 
     <!-- HEADER -->
-    <header class="container header header-image">
+    <header class="container header-contact">
       <img
-        src="assets/images/parc-petal-black.svg"
+        src="assets/images/parc-logomark-white.svg"
         class="overlay-img"
         alt="Overlay element"
       />
       <div class="col-10 col-lg-8 mx-auto">
-        <div class="container">
+        <div class="">
           <img
-            src="assets/images/home-jumbotron-pic.webp"
+            src="assets/images/contact-jumbotron-pic.jpg"
             class="background-img"
-            alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset"
+            alt="Image of beautiful South Dublin coastline on a bright sunny day"
           />
-          <p class="text-jumbotron text-white">we are PARC training</p>
-          <p class="text-white py-2">
-            Promoting Anti-discriminatory Responses for Change in the mental
-            health field. <br />
-            If you are interested in learning more about diverse and inclusive
-            practice get in touch with us today.
-          </p>
-          <div class="button py-2">
-            <a href="#" class="button-link">
-              <span class="button-text d-block">Get in touch</span>
-              <span class="button-icon pt-1"
-                ><i class="fa-solid fa-circle-arrow-right"></i
-              ></span>
-            </a>
-          </div>
+          <h1 class="text-white text-center">contact</h1>
         </div>
       </div>
     </header>
