--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
 
     <!-- HEADER -->
-    <header class="container header header-image">
+    <header class="container header">
       <img
         src="assets/images/parc-petal-black.svg"
         class="overlay-img"
