STYLE: Style Contact page jumbotron

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
     <header class="container header-contact">
       <img
         src="assets/images/parc-logomark-white.svg"
-        class="overlay-img"
+        class="overlay-img overlay-img-contact img-contact"
         alt="Overlay element"
       />
       <div class="col-10 col-lg-8 mx-auto">
@@ -134,7 +134,7 @@
             class="background-img"
             alt="Image of beautiful South Dublin coastline on a bright sunny day"
           />
-          <h1 class="text-white text-center">contact</h1>
+          <h1 class="text-white text-center mb-5">contact</h1>
         </div>
       </div>
     </header>
