--- a/contact.html
+++ b/contact.html
@@ -142,17 +142,34 @@
     <!-- CONTACT US -->
     <div class="container bg-white py-5">
       <div class="col py-5 mx-auto">
-        <div class="text-1-000 py-1 contact-us-para d-block mx-auto">
-          <p class="text-start text-1-000 mb-2">
+
+        <!-- desktop -->
+        <div class="text-1-000 py-1 contact-us-para mx-auto py-5">
+          <p class="text-center text-1-000 mb-2">
             If you want to find out more about becoming more diverse
             and inclusive in your organisation or practice, email us:
           </p>
-          <a class="d-flex align-items-center gap-3 contact-link"
+          <a class="d-flex align-items-center justify-content-center gap-3 contact-link"
             href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C"">
             <i class="fa-regular fa-envelope text-1-750"
                 aria-hidden="true">
             </i>
             <span class="text-1-500">parctrainingireland@gmail.com</span>
+          </a>
+        </div>
+
+        <!-- mobile -->
+        <div class="text-1-000 py-1 contact-us-para-mobile mx-auto">
+          <p class="text-center text-0-875 mb-2">
+            If you want to find out more about becoming more diverse
+            and inclusive in your organisation or practice, email us:
+          </p>
+          <a class="d-flex align-items-center justify-content-center gap-2 contact-link"
+            href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C"">
+            <i class="fa-regular fa-envelope text-1-500"
+                aria-hidden="true">
+            </i>
+            <span class="text-1-125">parctrainingireland@gmail.com</span>
           </a>
         </div>
 
