STYLE: Contact us link paragraph

--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
       <div class="col py-5 mx-auto">
 
         <!-- desktop -->
-        <div class="text-1-000 py-1 contact-us-para mx-auto py-5">
+        <div class="py-1 contact-us-para mx-auto py-5">
           <p class="text-center text-1-000 mb-2">
             If you want to find out more about becoming more diverse
             and inclusive in your organisation or practice, email us:
@@ -154,13 +154,13 @@
             <i class="fa-regular fa-envelope text-1-750"
                 aria-hidden="true">
             </i>
-            <span class="text-1-500">parctrainingireland@gmail.com</span>
+            <span class="fw-medium text-1-500">parctrainingireland@gmail.com</span>
           </a>
         </div>
 
         <!-- mobile -->
-        <div class="text-1-000 py-1 contact-us-para-mobile mx-auto">
-          <p class="text-center text-0-875 mb-2">
+        <div class="py-1 contact-us-para-mobile mx-auto">
+          <p class="text-center text-1-000 mb-2">
             If you want to find out more about becoming more diverse
             and inclusive in your organisation or practice, email us:
           </p>
@@ -169,7 +169,7 @@
             <i class="fa-regular fa-envelope text-1-500"
                 aria-hidden="true">
             </i>
-            <span class="text-1-125">parctrainingireland@gmail.com</span>
+            <span class="fw-medium text-1-125">parctrainingireland@gmail.com</span>
           </a>
         </div>
 
